# axum-app-auth

./: .env  Cargo.toml  README.md  mac.env
src/: error.rs  main.rs  router.rs
src/api/: health.rs  user.rs
src/config/: database.rs
src/domain/: user.rs
src/repository/: user_repository.rs
src/router/: router.rs
src/service/: user_service.rs
