[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand_core = "0.6"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
dotenvy = "0.15"