[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand_core = "0.6"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
serde_json = "1.0"
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
validator = "0.16"
thiserror = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }